# bitbots_minibot

./: README.md  package.xml
config/: minibot.rviz  minibot_control.yaml
launch/: minibot_gazebo.launch  minibot_robocup.launch  minibot_standalone.launch
meshes/: ankle_roll_low.stl  foot_coll.dae  head_lower_high.stl  head_upper_high.stl  head_upper_low.stl  hip_roll_coll.dae  hip_roll_high.stl  hip_roll_low.dae  hip_roll_low.stl  lower_arm_high.stl  lower_arm_low.stl  lower_leg_coll.dae  lower_leg_low.stl  shoulder_con_high.stl  torso_low.stl  upper_arm_high.stl  upper_arm_low.dae  upper_arm_low.stl  upper_leg_coll.dae  upper_leg_high.stl  yaw_con_low.stl
minibot_animations/: CMakeLists.txt  bottom-up-minibot-iran2016.json  package.xml
minibot_animations/animations/: long_test.json
minibot_description/: CMakeLists.txt  package.xml
minibot_description/config/: minibot.rviz  minibot_control.yaml  minibot_control_renamed.yaml
minibot_description/launch/: minibot_control.launch  minibot_gazebo.launch  minibot_renamed.launch  minibot_robocup.launch  minibot_rviz.launch  minibot_standalone.launch  minibot_traj.launch  minibot_traj_control.launch  spawn_minibot.launch
minibot_description/meshes/: ankle_roll_coll.dae  ankle_roll_high.stl  ankle_roll_low.dae  ankle_roll_low.stl  foot_high.stl  foot_low.stl  head_lower_coll.dae  head_lower_high.stl  head_lower_low.stl  head_upper_coll.dae  head_upper_low.stl  lower_arm_coll.dae  lower_leg_high.stl  shoulder_con_coll.dae  shoulder_con_low.stl  torso_coll.dae  upper_arm_coll.dae  yaw_con_coll.dae  yaw_con_high.stl
minibot_description/scripts/: goals_to_joint_states.py  pub_joint_goals_sim.py  pub_joint_goals_sim_renamed.py
minibot_description/urdf/: minibot.urdf  minibot.urdf.xacro  minibot_renamed.urdf  minibot_renamed.urdf.xacro
minibot_moveit_config/: .setup_assistant  package.xml
minibot_moveit_config/config/: Minibot.srdf  fake_controllers.yaml  kinematics.yaml  ompl_planning.yaml
minibot_moveit_config/launch/: demo.launch  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  (+6 more)
scripts/: plot_joint_controller_errors.sh
stl/: ankle_roll_high.stl  foot_high.stl  foot_low.stl  head_lower_low.stl  lower_arm..stl  lower_arm_high.stl  lower_leg_high.stl  lower_leg_low.stl  shoulder_con_low.stl  torso_assembly.stl  upper_arm_high.stl  upper_arm_low.stl  upper_leg_high.stl  upper_leg_low.stl  yaw_con_high.stl
urdf/: minibot.urdf  minibot.urdf.xacro
(+18 files in other folders)
