<?xml version="1.0"?>
<package>
  <name>minibot_description</name>
  <version>1.1.0</version>
  <description>Describes Bitbots AG minibot robot model with camera plugin and accelerometer plugin (hector) for RViz and Gazebo</description>
  
  <maintainer email="0bestman@informatik.uni-hamburg.de">Marc Bestmann (Bitbots AG)</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/robotis_robotis_op_description</url>
  <url type="git">https://github.com/ROBOTIS-OP/robotis_op_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
