<?xml version="1.0"?>
<package>
  <name>minibot_description</name>
  <version>1.1.0</version>
  <description>Describes Bit-Bots minibot robot model with camera plugin and accelerometer plugin (hector) for RViz and Gazebo</description>
  
  <maintainer email="0bestman@informatik.uni-hamburg.de">Marc Bestmann (Bitbots AG)</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
