<?xml version="1.0"?>
<package>
  <name>minibot_description</name>
  <version>1.1.0</version>
  <description>Describes Bit-Bots minibot robot model with camera plugin and accelerometer plugin (hector) for RViz and Gazebo</description>
  
  <maintainer email="0bestman@informatik.uni-hamburg.de">Marc Bestmann (Bitbots AG)</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>urdf</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>effort_controllers</run_depend>  
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>gazebo_ros_control</run_depend> 



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_media_path="${prefix}" />  <!-- for standalone Gazebo, ROS Hydro and up -->
    <gazebo gazebo_media_path="${prefix}" />
    <gazebo plugin_path="${prefix}/lib" />
    <rviz rviz_media_path="${prefix}/Media/materials/scripts:${prefix}/Media/textures"/>

    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->
  </export>

</package>
